5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1734_2499.log
== SUBMITION (2019-05-09 18:55:10) 
-- CODE:
from math import factorial
k = int(input()
e = 1
indice=1
while( indice<=k ):
	e = e + (1/ factorial(indice))
	indice=indice+1
print(round(e,8))
-- EXECUTION TIME:
0.568674
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 3
    e = 1
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:55:16) 
-- CODE:
from math import factorial
k = int(input()
e = 1
indice=1
while( indice<=k ):
	e = e + (1/ factorial(indice))
	indice=indice+1
print(round(e,8))
-- ERROR:
File "XXXX", line 3
    e = 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:17:40) 
-- CODE:
from math import *
k = int(input("numero natural: ")
soma=0
i=0
f=k-1
while(i<=f):
		  soma=soma+(1/factorial(i))
		  i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.196347
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 3
    soma=0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:18:43) 
-- CODE:
from math import *
k = int(input("numero natural: ")
soma=0
i=0
f=k-1
while(i<=f):
		  soma=soma+(1/factorial(i))
		  i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    soma=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:19:08) 
-- CODE:
from math import *
k = int(input("numero natural: ")
soma = 0
i = 0
f=k-1
while(i<=f):
		  soma=soma+(1/factorial(i))
		  i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    soma = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:19:41) 
-- CODE:
from math import *
k = int(input("numero natural: ")
soma = 0 #acumuladora
i = 0 #contador
f=k-1
while(i<=f):
		  soma=soma+(1/factorial(i))
		  i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    soma = 0 #acumuladora
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:20:10) 
-- CODE:
from math import *
k = int(input("numero natural: ")
s = 0 #acumuladora
i = 0 #contador
f=k-1
while(i<=f):
		  s=s+(1/factorial(i))
		  i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    s = 0 #acumuladora
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:22:42) 
-- CODE:
from math import *
k = int(input("numero natural: ")
s=0 #acumuladora
i=0 #contador
f=k-1
while(i<=f):
		  s=s+(1/factorial(i))
		  i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    s=0 #acumuladora
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:23:01) 
-- CODE:
from math import *
k = int(input("numero natural: ")

i=0 #contador
f=k-1
while(i<=f):
		  s=s+(1/factorial(i))
		  i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 4
    i=0 #contador
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:23:22) 
-- CODE:
from math import *
k = int(input("numero natural: ")


f=k-1
while(i<=f):
		  s=s+(1/factorial(i))
		  i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 5
    f=k-1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:23:45) 
-- CODE:
from math import *
k = int(input("numero natural: ")
s=0
i=0
f=k-1
while(i<=f):
		  s=s+(1/factorial(i))
		  i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    s=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:23:53) 
-- CODE:
from math import *
k = int(input("numero natural: ")
s=0
i=0
f=k-1
while(i<=f):
		  s=s+(1/factorial(i))
		  i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.141192
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 3
    s=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:33:01) 
-- CODE:
from math import *
k = int(input("numero natural: ")
s=0
i=0
f=k-1
while(i<=f):
		  s=s+(1/factorial(i))
		  i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    s=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:34:27) 
-- CODE:
from math import *
k = int(input("numero natural: ")
s=0
i=0
f=k-1
while(i<=f):
		  s=s+(1/factorial(i))
		  i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.129663
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 3
    s=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:34:31) 
-- CODE:
from math import *
k = int(input("numero natural: ")
s=0
i=0
f=k-1
while(i<=f):
		  s=s+(1/factorial(i))
		  i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    s=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:35:18) 
-- CODE:
from math import *
k = int(input("numero natural: ")
s=0 #acumuladora
i=0 #contador
f=k-1
while(i<=f):
		  s=s+(1/factorial(i))
		  i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    s=0 #acumuladora
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:36:12) 
-- CODE:
from math import *
k = int(input("numero natural: ")
soma = 0 #acumuladora
i = 0 #contador
f = k-1
while(i<=f):
		  soma = soma + (1/factorial(i))
		  i = i + 1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    soma = 0 #acumuladora
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:36:16) 
-- CODE:
from math import *
k = int(input("numero natural: ")
soma = 0 #acumuladora
i = 0 #contador
f = k-1
while(i<=f):
		  soma = soma + (1/factorial(i))
		  i = i + 1
print(round(soma,8))
-- EXECUTION TIME:
0.147211
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 3
    soma = 0 #acumuladora
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:43:47) 
-- CODE:
from math import *
k = int(input("numero natural: ")
soma = 0 #acumuladora
i = 0 #contador
f = k-1
while(i<=f):
		  soma = soma + (1/factorial(i))
		  i = i + 1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    soma = 0 #acumuladora
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 13:45:44) 
-- CODE:
from math import *
k = int(input("numero natural: ")
soma = 0 #acumuladora
i = 0 #contador
f = k-1
while(i<=f):
		  soma = soma + (1/factorial(i))
		  i = i + 1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    soma = 0 #acumuladora
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:32:26) 
-- CODE:
from math import *
k = int(input("numero natural: ")
soma=0
i=0
fim=k-1
while (i<=fim):
	soma=soma+(1/factorial(i))
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    soma=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 14:40:16) 
-- CODE:
from math import *
k = int(input("numero natural: ")
soma=0
i=0
while (i<k):
	soma=soma+(1/factorial(i))
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.318856
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 3
    soma=0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:40:19) 
-- CODE:
from math import *
k = int(input("numero natural: ")
soma=0
i=0
while (i<k):
	soma=soma+(1/factorial(i))
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    soma=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 14:40:34) 
-- CODE:
from math import *
k = int(input("numero natural: ")
soma = 0
i=0
while (i<k):
	soma=soma+(1/factorial(i))
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    soma = 0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:11:26) 
-- CODE:
from math import *
k = int(input("numero natural: ")
soma=0
i=0
while (i<k):
	soma=soma+1/(factorial(i))
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.191445
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 3
    soma=0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:11:31) 
-- CODE:
from math import *
k = int(input("numero natural: ")
soma=0
i=0
while (i<k):
	soma=soma+1/(factorial(i))
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.172199
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 3
    soma=0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:11:33) 
-- CODE:
from math import *
k = int(input("numero natural: ")
soma=0
i=0
while (i<k):
	soma=soma+1/(factorial(i))
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 3
    soma=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:11:57) 
-- CODE:
from math import *
k = int(input("numero natural: ")
		  
soma=0
i=0
while (i<k):
	soma=soma+1/(factorial(i))
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.200486
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 4
    soma=0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:12:44) 
-- CODE:
from math import *
k = int(input("numero natural: ")
		  
soma=0
i=0
while (i<=k):
	soma=soma+1/(factorial(i))
	i=i+1
print(round(soma,8))
-- EXECUTION TIME:
0.215885
-- ERROR:
  File "/home/codebench/codes/1734/2499/main.py", line 4
    soma=0
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:12:51) 
-- CODE:
from math import *
k = int(input("numero natural: ")
		  
soma=0
i=0
while (i<=k):
	soma=soma+1/(factorial(i))
	i=i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 4
    soma=0
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
